Application1AB/src/objects/Wheel__c.object
<CustomObject>
    <fields>
        <fullName>Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CarWheel__c</fullName>
        <label>CarWheel</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Wheels</relationshipLabel>
        <relationshipName>Wheels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Front__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Left__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right</label>
        <type>Checkbox</type>
    </fields>
    <label>Wheel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wheel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>